newpro: Fix configuration search dropdown text alignment

--- a/public_html/layout/newpro/css/common.css
+++ b/public_html/layout/newpro/css/common.css
@@ -25,7 +25,6 @@ body {
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 12px;
   line-height: 1.25;
-  text-align: center;  /* For Win IE 6(Margin auto layout) */
 }
 
 a:link {
